--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,14 @@
 			<optional>true</optional>
 		</dependency>
 	
+	
+        <!-- Model Mapper: http://modelmapper.org/ -->
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+	
 	<!-- JPA, MySQL e H2 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
